[project]
name = "git-reviewers"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "Suggest reviewers for your git branch"
requires-python = ">=3.7"
keywords = ["git", "code", "review", "reviewer", "log", "history"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.6.1",        # Test coverage
    "ruff==0.6.7",            # Python linting
    "mypy==1.11.2",           # Static typing
]

[project.urls]
"Homepage" = "https://github.com/albertyw/git-reviewers"

[project.scripts]
git_reviewers = "git_reviewers.reviewers:main"

[tool.setuptools.dynamic]
version = {attr = "git_reviewers.reviewers.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[options.package_data]
git_reviewers = ["py.typed"]

[tool.ruff]
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]
lint.ignore = ["B010"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "build",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
